--- a/src/app/components/Loading/style.css
+++ b/src/app/components/Loading/style.css
@@ -6,13 +6,16 @@
   height: 100vh;
   position: fixed;
   background: rgba(17,47,65, 0.9);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  z-index: 1;
 }
 
 .lds {
   display: inline-block;
   position: relative;
-  width: 64px;
-  height: 64px;
+  width: 364px;
+  height: 364px;
 }
 .lds div {
   position: absolute;
@@ -26,8 +29,8 @@
 }
 @keyframes lds {
   0% {
-    top: 28px;
-    left: 28px;
+    top: 158px;
+    left: 158px;
     width: 0;
     height: 0;
     opacity: 1;
@@ -35,8 +38,8 @@
   100% {
     top: -1px;
     left: -1px;
-    width: 58px;
-    height: 58px;
+    width: 320px;
+    height: 320px;
     opacity: 0;
   }
 }
