--- a/src/app/containers/History/components/deleteButton/style.css
+++ b/src/app/containers/History/components/deleteButton/style.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Noto Sans JP');
 
 button {
+  font-family: 'Noto Sans JP';
+  font-weight: bolder;
+  font-size: 1.2em;
   background-color: red;
   color: whitesmoke;
   height: 5vh;
   width: 90%;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-color: orangered;
 }
