--- a/src/app/containers/History/components/history/style.css
+++ b/src/app/containers/History/components/history/style.css
@@ -7,7 +7,6 @@
   width: 90%;
   border: 2px solid #919193;
   border-radius: 6px;
-  font-size: 2em;
   margin: 2px 0 0 0;
   padding: 5px 0px 5px 0px;
   font-family: 'Noto Sans JP';
@@ -37,11 +36,17 @@
   align-items: center;
 }
 
-.hash {
+.time {
   margin: 0;
   border-right: 2px solid #919193;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100%;
+}
+
+.time p {
+  margin: 0;
+  padding: 0 5px 0 5px;
 }
