--- a/src/app/containers/History/components/historyList/style.css
+++ b/src/app/containers/History/components/historyList/style.css
@@ -1,9 +1,22 @@
 .container {
   width: 40vw;
-  height: 90vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fafafa;
+  background-color: rgb(90, 58, 90, 0.2);
+  overflow-y: scroll;
+}
+
+@media (min-width:1000px){
+    .container {
+      width: 50vw;
+    }
+}
+
+@media (max-width:999px) {
+  .container {
+      width: 80vw;
+    }
 }
